update: signIn を logIn に名前修正
