# api-server/src/auth/auth.controller.ts
@@ -1,7 +1,7 @@
 import { Request, Response } from 'express';
 import { AuthService } from './auth.service';
 import { SignUpUserDto } from './dto/sign-up-user.dto';
-import { SignInUserDto } from './dto/sign-in-user.dto';
+import { LogInUserDto } from './dto/sign-in-user.dto';
 
 // AuthServiceのインスタンスを1度だけ生成
 const authService = new AuthService();
@@ -11,11 +11,11 @@ const authService = new AuthService();
  *
  * @route POST /api/signin
  */
-export const signIn = async (req: Request, res: Response) => {
+export const logIn = async (req: Request, res: Response) => {
   try {
-    const { email, password } = req.body as SignInUserDto;
+    const { email, password } = req.body as LogInUserDto;
 
-    const resUser = await authService.signIn({
+    const resUser = await authService.logIn({
       email: email,
       password: password,
     });
